--- a/EXAMPLE_POST1.yaml
+++ b/EXAMPLE_POST1.yaml
@@ -2,12 +2,16 @@ timing: False
 debug: False
 stop_at_error: False
 
+# THIS EXAMPLE POST PROCESS EXAMPLE_MCMC1 WITH HIGH ACC SETTINGS ON BOTH CAMB AND COSMOLIKE
+# THE POST PROCESS ASSUMES 0.35% BURN IN (IT WILL SKIP THEM); IT ALSO THINS THE CHAIN
+# BY A FACTOR 5
+
 likelihood:
-  des_y3.des_3x2pt:
+  des_y3.des_cosmic_shear:
     path: ./external_modules/data/des_y3
-    data_file: DES_Y1_real.dataset
+    data_file: DES_Y3_real.dataset
     accuracyboost: 1.0
-    integration_accuracy: 0
+    integration_accuracy: 1
     kmax_boltzmann: 5.0
 
 params:
@@ -91,96 +95,99 @@ params:
   tau:
     value: 0.0697186
     latex: \tau_\mathrm{reio}
-  # ---------------------------------------------------------------------------------------
-  # DES-Y1 3x2pt nuissance parameter begins
-  # ---------------------------------------------------------------------------------------
+  # ----------------------------------------------------------------------------
+  # DES-Y3 CS nuissance parameter Start
+  # ----------------------------------------------------------------------------
+  # ----------------------------------------------------------------------------
+  # DES-Y3 SOURCE VALUES FROM TABLE I, PAGE 11 of 2105.13549
+  # ----------------------------------------------------------------------------
   DES_DZ_S1:
     prior:
       dist: norm
-      loc: -0.001
-      scale: 0.016
+      loc: 0.0
+      scale: 0.018
     ref:
       dist: norm
-      loc: -0.001
-      scale: 0.016
+      loc: 0.0
+      scale: 0.018
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^1
   DES_DZ_S2:
     prior:
       dist: norm
-      loc: -0.019
-      scale: 0.013
+      loc: 0.0
+      scale: 0.015
     ref:
       dist: norm
-      loc: -0.019
-      scale: 0.013
+      loc: 0.0
+      scale: 0.015
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^2
   DES_DZ_S3:
     prior:
       dist: norm
-      loc: 0.009
+      loc: 0.0
       scale: 0.011
     ref:
       dist: norm
-      loc: 0.009
+      loc: 0.0
       scale: 0.011
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^3
   DES_DZ_S4:
     prior:
       dist: norm
-      loc: -0.018
-      scale: 0.022
+      loc: 0.0
+      scale: 0.017
     ref:
       dist: norm
-      loc: -0.018
-      scale: 0.022
+      loc: 0.0
+      scale: 0.017
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^4
   DES_M1:
     prior:
       dist: norm
-      loc: 0.012
-      scale: 0.023
+      loc: -0.006
+      scale: 0.009
     ref:
       dist: norm
-      loc: 0.012
-      scale: 0.023
-    proposal: 0.005
+      loc: -0.006
+      scale: 0.009
+    proposal: 0.004
     latex: m_\mathrm{DES}^1
   DES_M2:
     prior:
       dist: norm
-      loc: 0.012
-      scale: 0.023
+      loc: -0.02
+      scale: 0.008
     ref:
       dist: norm
-      loc: 0.012
-      scale: 0.023
-    proposal: 0.005
+      loc: -0.02
+      scale: 0.008
+    proposal: 0.004
     latex: m_\mathrm{DES}^2
   DES_M3:
     prior:
       dist: norm
-      loc: 0.012
-      scale: 0.023
+      loc: -0.024
+      scale: 0.008
     ref:
       dist: norm
-      loc: 0.012
-      scale: 0.023
-    proposal: 0.005
+      loc: -0.024
+      scale: 0.008
+    proposal: 0.004
     latex: m_\mathrm{DES}^3
   DES_M4:
     prior:
       dist: norm
-      loc: 0.012
-      scale: 0.023
+      loc: -0.037
+      scale: 0.008
     ref:
       dist: norm
-      loc: 0.012
-      scale: 0.023
-    proposal: 0.005
+      loc: -0.037
+      scale: 0.008
+    proposal: 0.003
     latex: m_\mathrm{DES}^4
   DES_A1_1:
     prior:
@@ -202,110 +209,38 @@ params:
       scale: 0.5
     proposal: 0.5
     latex: A_\mathrm{1-IA,DES}^2
-  DES_A2_1: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
-    value: 0.0
-    latex: A_\mathrm{2-IA,DES}^1 
-  DES_A2_2: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
-    value: 0.0
+  DES_A2_1:
+    prior:
+      min: -5
+      max:  5
+    ref:
+      dist: norm
+      loc: -1.36
+      scale: 0.5
+    proposal: 0.5
+    latex: A_\mathrm{2-IA,DES}^1
+  DES_A2_2:
+    prior:
+      min: -5
+      max:  5
+    ref:
+      dist: norm
+      loc: -2.5
+      scale: 0.5
+    proposal: 0.5
     latex: A_\mathrm{2-IA,DES}^2
-  DES_BTA_1: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
-    value: 1.0
-    latex: A_\mathrm{BTA-IA,DES}^1
- # Lensing photo-z errors
-  DES_DZ_L1:
+  DES_BTA_1:
     prior:
-      dist: norm
-      loc: 0.008
-      scale: 0.007
+      min: 0
+      max: 2
     ref:
       dist: norm
-      loc: 0.008
-      scale: 0.007
-    proposal: 0.004
-    latex: \Delta z_\mathrm{l,DES}^1
-  DES_DZ_L2:
-    prior:
-      dist: norm
-      loc: -0.005
-      scale: 0.007
-    ref:
-      dist: norm
-      loc: -0.005
-      scale: 0.007
-    proposal: 0.003
-    latex: \Delta z_\mathrm{l,DES}^2
-  DES_DZ_L3:
-    prior:
-      dist: norm
-      loc: 0.006
-      scale: 0.006
-    ref:
-      dist: norm
-      loc: 0.006
-      scale: 0.006
-    proposal: 0.003
-    latex: \Delta z_\mathrm{l,DES}^3
-  DES_DZ_L4:
-    prior:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    ref:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    proposal: 0.005
-    latex: \Delta z_\mathrm{l,DES}^4
-  DES_DZ_L5:
-    prior:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    ref:
-      dist: norm
-      loc: 0.0
-      scale: 0.01
-    proposal: 0.005
-    latex: \Delta z_\mathrm{l,DES}^5
+      loc: 1
+      scale: 0.15
+    proposal: 0.1
   # ----------------------------------------------------------------------------
-  # Cosmolike convention BMAG_COSMOLIKE = 2 BMAG_COSMOSIS - 1
+  # DES-Y3 CS nuissance parameter End
   # ----------------------------------------------------------------------------
-  DES_BMAG_1:
-    value: 0.0
-    latex: b_\mathrm{BMAG-DES}^1
-  DES_BMAG_2:
-    value: 0.0
-    latex: b_\mathrm{BMAG-DES}^2
-  DES_BMAG_3:
-    value: 0.0
-    latex: b_\mathrm{BMAG-DES}^3
-  DES_BMAG_4:
-    value: 0.0
-    latex: b_\mathrm{BMAG-DES}^4
-  DES_BMAG_5:
-    value: 0.0
-    latex: b_\mathrm{BMAG-DES}^5
-  # ----------------------------------------------------------------------------
-  # POINT MASS MARGINALIZATION
-  # ----------------------------------------------------------------------------
-  DES_PM1:
-    value: 0.0
-    latex: PM_\mathrm{DES}^1
-  DES_PM2:
-    value: 0.0
-    latex: PM_\mathrm{DES}^2
-  DES_PM3:
-    value: 0.0
-    latex: PM_\mathrm{DES}^3
-  DES_PM4:
-    value: 0.0
-    latex: PM_\mathrm{DES}^4
-  DES_PM5:
-    value: 0.0
-    latex: PM_\mathrm{DES}^5
-  # ---------------------------------------------------------------------------------------
-  # DES-Y1 3x2pt nuissance parameter End
-  # ---------------------------------------------------------------------------------------
   # ---------------------------------------------------------------------------------------
   # ------------------------------------- DERIVED PARAMETERS ------------------------------
   # ---------------------------------------------------------------------------------------
@@ -360,41 +295,60 @@ theory:
     extra_args:
       halofit_version: takahashi
       AccuracyBoost: 1.05
-      lens_potential_accuracy: 1.0
+      lens_potential_accuracy: 1
       num_massive_neutrinos: 1
       nnu: 3.046
       dark_energy_model: ppf
       accurate_massive_neutrino_transfers: false
       k_per_logint: 20
 
-sampler:
-  minimize:
-    # Method: bobyqa|scipy
-    method: bobyqa
-    # Minimizes the full posterior (False) or just the likelihood (True)
-    # Likelihood maximization is subject to prior bounds!
-    ignore_prior: False
-    # Maximum number of iterations (default: practically infinite)
-    max_evals: 1e6d
-    # Treatment of unbounded parameters: confidence level to use
-    # (Use with care if there are likelihood modes close to the edge of the prior)
-    confidence_for_unbounded: 0.9999995  # 5 sigmas of the prior
-    # Seeding runs
-    seed:  # an initial seed (entropy) for the numpy random generator
-    # option: value
-    # bobyqa:
-    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/userguide.html
-    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/advanced.html
-    override_bobyqa:
-      # option: value
-      # Relaxed convergence criterion for numerically-noisy likelihoods
-      rhoend: 0.05
-    # File (including path) or matrix defining a covariance matrix for the proposal:
-    # - null (default): will be generated from params info (prior and proposal)
-    # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    # - "auto" (cosmology runs only): will be looked up in a library
-    # In any case, if an old chain its present, its covmat will be loaded instead.
-    covmat:
-    covmat_params:
+post:
+  skip: 0.35
+  thin: 5
+  suffix: HACC
+  remove:
+    theory:
+      camb:
+        path: ./external_modules/code/CAMB
+        use_renames: True
+        extra_args:
+          halofit_version: takahashi
+          AccuracyBoost: 1.05
+          lens_potential_accuracy: 1
+          num_massive_neutrinos: 1
+          nnu: 3.046
+          dark_energy_model: ppf
+          accurate_massive_neutrino_transfers: false
+          k_per_logint: 20
+    likelihood:
+      des_y3.des_cosmic_shear:
+        path: ./external_modules/data/des_y3
+        data_file: DES_Y3_real.dataset
+        accuracyboost: 1.0
+        integration_accuracy: 1
+        kmax_boltzmann: 5.0
+  add:
+    theory:
+      camb:
+        path: ./external_modules/code/CAMB
+        stop_at_error: False
+        use_renames: True
+        extra_args:
+          halofit_version: takahashi
+          AccuracyBoost: 2.0
+          lens_potential_accuracy: 1.0
+          num_massive_neutrinos: 1
+          nnu: 3.046
+          dark_energy_model: ppf
+          accurate_massive_neutrino_transfers: false
+          k_per_logint: 20    
+    likelihood:
+      des_y3.des_cosmic_shear:
+        path: ./external_modules/data/des_y3
+        data_file: DES_Y3_real.dataset
+        accuracyboost: 3.0
+        integration_accuracy: 5
+        kmax_boltzmann: 5.0
 
-output: ./projects/des_y3/chains/EXAMPLE_MCMC4
+
+output: ./projects/des_y3/chains/EXAMPLE_MCMC1
