--- a/EXAMPLE_POST4.yaml
+++ b/EXAMPLE_POST4.yaml
@@ -2,6 +2,10 @@ timing: False
 debug: False
 stop_at_error: False
 
+# THIS EXAMPLE POST PROCESS EXAMPLE_MCMC4 WITH HIGH ACC SETTINGS ON BOTH CAMB AND COSMOLIKE
+# THE POST PROCESS ASSUMES 0.35% BURN IN (IT WILL SKIP THEM); IT ALSO THINS THE CHAIN
+# BY A FACTOR 5
+
 likelihood:
   des_y3.des_3x2pt:
     path: ./external_modules/data/des_y3
@@ -367,34 +371,52 @@ theory:
       accurate_massive_neutrino_transfers: false
       k_per_logint: 20
 
-sampler:
-  minimize:
-    # Method: bobyqa|scipy
-    method: bobyqa
-    # Minimizes the full posterior (False) or just the likelihood (True)
-    # Likelihood maximization is subject to prior bounds!
-    ignore_prior: False
-    # Maximum number of iterations (default: practically infinite)
-    max_evals: 1e6d
-    # Treatment of unbounded parameters: confidence level to use
-    # (Use with care if there are likelihood modes close to the edge of the prior)
-    confidence_for_unbounded: 0.9999995  # 5 sigmas of the prior
-    # Seeding runs
-    seed:  # an initial seed (entropy) for the numpy random generator
-    # option: value
-    # bobyqa:
-    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/userguide.html
-    #  - https://numericalalgorithmsgroup.github.io/pybobyqa/build/html/advanced.html
-    override_bobyqa:
-      # option: value
-      # Relaxed convergence criterion for numerically-noisy likelihoods
-      rhoend: 0.05
-    # File (including path) or matrix defining a covariance matrix for the proposal:
-    # - null (default): will be generated from params info (prior and proposal)
-    # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    # - "auto" (cosmology runs only): will be looked up in a library
-    # In any case, if an old chain its present, its covmat will be loaded instead.
-    covmat:
-    covmat_params:
+post:
+  skip: 0.35
+  thin: 5
+  suffix: HACC
+  remove:
+    theory:
+      camb:
+        path: ./external_modules/code/CAMB
+        use_renames: True
+        extra_args:
+          halofit_version: takahashi
+          AccuracyBoost: 1.05
+          lens_potential_accuracy: 1
+          num_massive_neutrinos: 1
+          nnu: 3.046
+          dark_energy_model: ppf
+          accurate_massive_neutrino_transfers: false
+          k_per_logint: 20
+    likelihood:
+      des_y3.des_3x2pt:
+        path: ./external_modules/data/des_y3
+        data_file: DES_Y1_real.dataset
+        accuracyboost: 1.0
+        integration_accuracy: 0
+        kmax_boltzmann: 5.0
+  add:
+    theory:
+      camb:
+        path: ./external_modules/code/CAMB
+        stop_at_error: False
+        use_renames: True
+        extra_args:
+          halofit_version: takahashi
+          AccuracyBoost: 2.0
+          lens_potential_accuracy: 1.0
+          num_massive_neutrinos: 1
+          nnu: 3.046
+          dark_energy_model: ppf
+          accurate_massive_neutrino_transfers: false
+          k_per_logint: 20    
+    likelihood:
+      des_y3.des_3x2pt:
+        path: ./external_modules/data/des_y3
+        data_file: DES_Y1_real.dataset
+        accuracyboost: 3.0
+        integration_accuracy: 5
+        kmax_boltzmann: 5.0
 
 output: ./projects/des_y3/chains/EXAMPLE_MCMC4
